syntax = "proto3";

package protostuff_unittest;

service SearchService {
    // Only messages are valig return types for rpc methods
    rpc search (SearchRequest) returns (Enum);
}

message SearchRequest {

}

enum Enum {

}